Upgrade to JDK16 and Gradle 7.0

--- a/hartshorn-config/build.gradle
+++ b/hartshorn-config/build.gradle
@@ -18,8 +18,8 @@
 apply from: "$rootDir/parent.gradle"
 
 dependencies {
-    compileOnly project(':hartshorn-bootstrap')
-    compileOnly project(':hartshorn-persistence')
+    include project(':hartshorn-bootstrap')
+    include project(':hartshorn-persistence')
 
-    compile "org.yaml:snakeyaml:${snakeYamlVersion}"
+    include "org.yaml:snakeyaml:${snakeYamlVersion}"
 }
