Clean up Gradle repositories where possible

--- a/build.gradle
+++ b/build.gradle
@@ -80,6 +80,8 @@ allprojects {
                 name 'Jitpack'
                 url 'https://jitpack.io'
             }
+            // TODO: Deprecated
+            jcenter()
         }
 
         configurations {
