--- a/hartshorn-sponge-8/build.gradle
+++ b/hartshorn-sponge-8/build.gradle
@@ -61,7 +61,7 @@ sponge {
     }
 }
 
-def ignoreProjects = ['examples', 'hartshorn-sponge-7', 'hartshorn-nms-1.12']
+def ignoreProjects = ['examples', 'hartshorn-sponge-7', 'hartshorn-sponge-8', 'hartshorn-nms-1.12']
 
 dependencies {
     new File(parent.rootDir, 'hartshorn-minecraft').listFiles().each {
