--- a/.github/workflows/hartshorn.yml
+++ b/.github/workflows/hartshorn.yml
@@ -7,6 +7,7 @@ on: [pull_request]
 
 jobs:
   javadoc:
+    name: Verify Javadocs
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -19,6 +20,7 @@ jobs:
       - name: Verify Javadocs
         run: ./gradlew aggregateJavadoc
   build:
+    name: Build all
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -31,6 +33,7 @@ jobs:
       - name: Build all
         run: ./gradlew build -x test
   test:
+    name: Tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
