--- a/hartshorn-sponge-8/build.gradle
+++ b/hartshorn-sponge-8/build.gradle
@@ -76,8 +76,12 @@ tasks.build {
 
 shadowJar {
     configurations = [project.configurations.shadow]
+    relocate 'com.fasterxml.jackson', 'org.dockbox.hartshorn.internal.jackson'
+    relocate 'org.apache.commons', 'org.dockbox.hartshorn.internal.apache.commons'
+
     dependencies {
         exclude(dependency('org.projectlombok:lombok'))
+        exclude(dependency('org.slf4j:slf4j-api'))
     }
 }
 
