--- a/hartshorn-test/build.gradle
+++ b/hartshorn-test/build.gradle
@@ -23,7 +23,7 @@ plugins {
 group = 'org.dockbox.hartshorn.common'
 description 'Default implementations for Hartshorn'
 
-def depBlacklist = ['hartshorn-sponge-7', 'hartshorn-sponge-8', 'hartshorn-nms-1.12', 'hartshorn-test', 'examples']
+def depBlacklist = ['hartshorn-sponge-7', 'hartshorn-sponge-8', 'hartshorn-nms-1.12', 'hartshorn-test', 'examples', 'palswap']
 
 dependencies {
     rootDir.listFiles().each {
@@ -36,7 +36,9 @@ dependencies {
 
     new File(rootDir, 'hartshorn-minecraft').listFiles().each {
         if (it.directory && new File(it, 'build.gradle').exists()) {
-            testFixturesApi project(":hartshorn-minecraft:${it.name}")
+            if (!depBlacklist.contains(it.name)) {
+                testFixturesApi project(":hartshorn-minecraft:${it.name}")
+            }
         }
     }
 
