--- a/settings.gradle
+++ b/settings.gradle
@@ -19,7 +19,7 @@ rootProject.name = 'Hartshorn'
 gradle.startParameter.continueOnFailure = true
 
 includeAll(rootDir, '', 'hartshorn-sponge-7', 'hartshorn-nms-1.12')
-includeAll(new File(rootDir, 'hartshorn-minecraft'), ':hartshorn-minecraft')
+includeAll(new File(rootDir, 'hartshorn-minecraft'), ':hartshorn-minecraft', 'palswap')
 
 def includeAll(File dir, String prefix, String... blacklist) {
     dir.listFiles().each {
