Shade SQLite JDBC

--- a/hartshorn-sponge-8/build.gradle
+++ b/hartshorn-sponge-8/build.gradle
@@ -68,6 +68,8 @@ dependencies {
             includeShadow project(":${it.name}")
         }
     }
+
+    includeShadow "org.xerial:sqlite-jdbc:$xerialSqliteJdbcVersion"
 }
 
 tasks.build {
