--- a/hartshorn-commands/build.gradle
+++ b/hartshorn-commands/build.gradle
@@ -18,8 +18,8 @@
 apply from: "$rootDir/parent.gradle"
 
 dependencies {
-    include project(':hartshorn-bootstrap')
-    include project(':hartshorn-i18n')
-    include project(':hartshorn-events')
-    include project(':hartshorn-proxy')
+    apiInclude project(':hartshorn-bootstrap')
+    apiInclude project(':hartshorn-i18n')
+    apiInclude project(':hartshorn-events')
+    apiInclude project(':hartshorn-proxy')
 }
