--- a/hartshorn-di/build.gradle
+++ b/hartshorn-di/build.gradle
@@ -16,10 +16,10 @@
  */
 
 dependencies {
-    include project(':hartshorn-core')
-    include project(':hartshorn-util')
+    apiInclude project(':hartshorn-core')
+    apiInclude project(':hartshorn-util')
     include "com.google.inject:guice:$guiceVersion"
 
-    share 'javax.inject:javax.inject:1'
-    share "org.reflections:reflections:$reflectionsVersion"
+    apiInclude 'javax.inject:javax.inject:1'
+    apiInclude "org.reflections:reflections:$reflectionsVersion"
 }
