--- a/hartshorn-discord/build.gradle
+++ b/hartshorn-discord/build.gradle
@@ -8,7 +8,7 @@ dependencies {
     compileOnly project(':hartshorn-commands')
 
     include 'com.github.ygimenez:Pagination-Utils:2.1.1'
-    share ("net.dv8tion:JDA:$jdaVersion") {
+    apiInclude ("net.dv8tion:JDA:$jdaVersion") {
         exclude module: 'opus-java'
     }
 }
