--- a/hartshorn-test/build.gradle
+++ b/hartshorn-test/build.gradle
@@ -30,6 +30,7 @@ dependencies {
         if (it.directory && it.name.startsWith('hartshorn-') && new File(it, 'build.gradle').exists()) {
             if (!depBlacklist.contains(it.name)) {
                 testFixturesApi project(":${it.name}")
+                testFixturesApi project(":${it.name}").sourceSets.impl.output
             }
         }
     }
@@ -38,9 +39,12 @@ dependencies {
         if (it.directory && new File(it, 'build.gradle').exists()) {
             if (!depBlacklist.contains(it.name)) {
                 testFixturesApi project(":hartshorn-minecraft:${it.name}")
+                testFixturesApi project(":hartshorn-minecraft:${it.name}").sourceSets.impl.output
             }
         }
     }
+
+    testFixturesImplementation "org.jetbrains:annotations:$jetbrainsAnnotationsVersion"
 
     testFixturesImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     testFixturesImplementation "org.junit.jupiter:junit-jupiter-params:$junitVersion"
