--- a/hartshorn-util/build.gradle
+++ b/hartshorn-util/build.gradle
@@ -16,8 +16,8 @@
  */
 
 dependencies {
-    include project(':hartshorn-core')
-    include "org.reflections:reflections:$reflectionsVersion"
-    include 'commons-beanutils:commons-beanutils:1.9.4'
-    share "org.jooq:joor:0.9.14"
+    apiInclude project(':hartshorn-core')
+    apiInclude "org.reflections:reflections:$reflectionsVersion"
+    apiInclude 'commons-beanutils:commons-beanutils:1.9.4'
+    apiInclude "org.jooq:joor:0.9.14"
 }
