--- a/hartshorn-persistence/build.gradle
+++ b/hartshorn-persistence/build.gradle
@@ -21,7 +21,7 @@ dependencies {
     apiInclude project(':hartshorn-bootstrap')
     apiInclude project(':hartshorn-proxy')
 
-    include 'com.fasterxml.jackson.core:jackson-core:2.12.3'
+    apiInclude 'com.fasterxml.jackson.core:jackson-core:2.12.3'
     include 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.12.3'
     include 'com.fasterxml.jackson.dataformat:jackson-dataformat-properties:2.12.3'
     include 'com.fasterxml.jackson.dataformat:jackson-dataformat-toml:2.12.3'
