--- a/hartshorn-test/build.gradle
+++ b/hartshorn-test/build.gradle
@@ -29,8 +29,8 @@ dependencies {
     rootDir.listFiles().each {
         if (it.directory && it.name.startsWith('hartshorn-') && new File(it, 'build.gradle').exists()) {
             if (!depBlacklist.contains(it.name)) {
-                testFixturesApi project(":${it.name}")
-                testFixturesApi project(":${it.name}").sourceSets.impl.output
+                testFixturesImplementation project(":${it.name}")
+                testFixturesImplementation project(":${it.name}").sourceSets.impl.output
             }
         }
     }
@@ -38,8 +38,8 @@ dependencies {
     new File(rootDir, 'hartshorn-minecraft').listFiles().each {
         if (it.directory && new File(it, 'build.gradle').exists()) {
             if (!depBlacklist.contains(it.name)) {
-                testFixturesApi project(":hartshorn-minecraft:${it.name}")
-                testFixturesApi project(":hartshorn-minecraft:${it.name}").sourceSets.impl.output
+                testFixturesImplementation project(":hartshorn-minecraft:${it.name}")
+                testFixturesImplementation project(":hartshorn-minecraft:${it.name}").sourceSets.impl.output
             }
         }
     }
@@ -60,4 +60,8 @@ dependencies {
 
     testFixturesImplementation "org.slf4j:slf4j-api:$slf4jVersion"
     testFixturesImplementation "org.slf4j:slf4j-simple:$slf4jVersion"
+
+    testFixturesImplementation "org.jooq:jooq:$jooqVersion"
+    testFixturesImplementation "org.jooq:jooq-meta:$jooqVersion"
+    testFixturesImplementation "org.jooq:jooq-codegen:$jooqVersion"
 }
