--- a/hartshorn-sponge-8/build.gradle
+++ b/hartshorn-sponge-8/build.gradle
@@ -72,10 +72,10 @@ dependencies {
     }
 
     // Additional shaded dependencies, these are not available on the platform by default
-    includeShadow "org.xerial:sqlite-jdbc:$xerialSqliteJdbcVersion"
-    includeShadow "org.jooq:jooq:$jooqVersion"
-    includeShadow "org.jooq:jooq-meta:$jooqVersion"
-    includeShadow "org.jooq:jooq-codegen:$jooqVersion"
+    includeShadow "org.hibernate:hibernate-core:5.5.5.Final"
+    includeShadow 'org.apache.derby:derby:10.8.2.2'
+    includeShadow 'javax.xml.bind:jaxb-api:2.2.4'
+
 }
 
 tasks.build {
