Use internal proxy provider in server bootstrap

--- a/hartshorn-minecraft/server/build.gradle
+++ b/hartshorn-minecraft/server/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     apiInclude project(':hartshorn-commands').sourceSets.impl.output
     apiInclude project(':hartshorn-i18n').sourceSets.impl.output
     apiInclude project(':hartshorn-di').sourceSets.impl.output
+    apiInclude project(':hartshorn-proxy')
 }
