--- a/hartshorn-bootstrap/build.gradle
+++ b/hartshorn-bootstrap/build.gradle
@@ -20,5 +20,5 @@ dependencies {
     apiInclude project(':hartshorn-util')
     apiInclude project(':hartshorn-di')
     apiInclude project(':hartshorn-exceptions')
-    apiInclude project(':hartshorn-di').sourceSets.impl.output
+    apiShare project(':hartshorn-di').sourceSets.impl.output
 }
