#342 Add basic region selection wand

--- a/hartshorn-minecraft/regions/build.gradle
+++ b/hartshorn-minecraft/regions/build.gradle
@@ -1,3 +1,4 @@
 dependencies {
-    compileOnly project(':hartshorn-persistence')
+    apiInclude project(':hartshorn-persistence')
+    apiInclude project(':hartshorn-minecraft:toolbinding')
 }
