--- a/hartshorn-config/build.gradle
+++ b/hartshorn-config/build.gradle
@@ -21,5 +21,5 @@ dependencies {
     apiInclude project(':hartshorn-bootstrap')
     apiInclude project(':hartshorn-persistence')
 
-    apiInclude "org.yaml:snakeyaml:${snakeYamlVersion}"
+    apiInclude "org.yaml:snakeyaml:$snakeYamlVersion"
 }
