--- a/hartshorn-discord/build.gradle
+++ b/hartshorn-discord/build.gradle
@@ -7,7 +7,7 @@ dependencies {
     compileOnly project(':hartshorn-config')
     compileOnly project(':hartshorn-commands')
 
-    apiInclude 'com.github.ygimenez:Pagination-Utils:2.1.1'
+    apiInclude "com.github.ygimenez:Pagination-Utils:$discordPaginationVersion"
     apiShare("net.dv8tion:JDA:$jdaVersion") {
         exclude module: 'opus-java'
     }
