--- a/hartshorn-test/build.gradle
+++ b/hartshorn-test/build.gradle
@@ -44,7 +44,7 @@ dependencies {
         }
     }
 
-    testFixturesImplementation "com.google.guava:guava:${guavaVersion}"
+    testFixturesImplementation "com.google.guava:guava:$guavaVersion"
 
     testFixturesImplementation "org.jetbrains:annotations:$jetbrainsAnnotationsVersion"
 
@@ -55,12 +55,12 @@ dependencies {
 
     testFixturesImplementation "org.mockito:mockito-inline:$mockitoVersion"
 
-    testFixturesImplementation 'org.projectlombok:lombok:1.18.20'
-    testFixturesAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
+    testFixturesImplementation "org.projectlombok:lombok:$lombokVersion"
+    testFixturesAnnotationProcessor "org.projectlombok:lombok:$lombokVersion"
 
     testFixturesImplementation "org.slf4j:slf4j-api:$slf4jVersion"
     testFixturesImplementation "org.slf4j:slf4j-simple:$slf4jVersion"
 
-    testFixturesImplementation "org.hibernate:hibernate-core:5.5.5.Final"
-    testFixturesImplementation 'org.apache.derby:derby:10.8.2.2'
+    testFixturesImplementation "org.hibernate:hibernate-core:$hibernateVersion"
+    testFixturesImplementation "org.apache.derby:derby:$derbyVersion"
 }
