--- a/gradle.properties
+++ b/gradle.properties
@@ -23,7 +23,7 @@ pluginName=Hartshorn
 junitVersion=5.3.2
 mockitoVersion=3.10.0
 jetbrainsAnnotationsVersion=19.0.0
-guavaVersion=21.0
+guavaVersion=30.1.1-jre
 slf4jVersion=1.7.25
 jdaVersion=4.2.0_214
 reflectionsVersion=0.9.11
